# rust-timeago

./: Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
src/: lib.rs  tests.rs  time_ago.rs
