[package]
name = "rust-timeago"
version = "0.1.0"
authors = ["Srinivas Reddy Thatiparthy <thatiparthysreenivas@gmail.com>"]
edition = "2018"
description="Yet another implementation of timeago"
license="Apache OR MIT"
publish=false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="0.4.19"
